--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_post">PostActivity</string>
     <string name="title_activity_respond">RespondActivity</string>
     <string name="title_activity_record">RecordActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 
 </resources>
