--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_activity_get_inspired">GetInspiredActivity</string>
     <string name="title_activity_appreciate">AppreciateActivity</string>
     <string name="title_activity_book_render">BookRenderActivity</string>
+    <string name="title_activity_user_verify">UserVerifyActivity</string>
 
 </resources>
