Redirections updated. Minor UI updates.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="title_activity_appreciate">AppreciateActivity</string>
     <string name="title_activity_book_render">BookRenderActivity</string>
     <string name="title_activity_user_verify">Candeo</string>
-    <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_user">Please Wait &#8230;</string>
     <string name="fa_magic">&#xf0d0;</string>
     <string name="fa_bullhorn">&#xf0a1;</string>
     <string name="fa_paperplane">&#xf1d8;</string>
